--- a/v/dev/notebooks/05-03-Calibrating-the-flats.html
+++ b/v/dev/notebooks/05-03-Calibrating-the-flats.html
@@ -1165,7 +1165,8 @@ is the exposure time, so we set that up below.</p>
           ...,
           [  2.7,   5.9,   9.4, ...,  -1.8,   7.5,   2.7],
           [  0.4,  13.4,   7.4, ...,  -0.7,  12. ,  -3.3],
-          [  0.1, -11.7,   3.1, ...,  -0.9,   2.6,   4.5]], unit=&#39;adu&#39;)}
+          [  0.1, -11.7,   3.1, ...,  -0.9,   2.6,   4.5]],
+         dtype=&#39;&gt;f8&#39;, unit=&#39;adu&#39;)}
 </pre></div>
 </div>
 </div>
